修改国际化注释

--- a/ro-common/src/main/resources/jdbc.properties
+++ b/ro-common/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 # DataSource
 jdbc.show_sql=true
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/ro-db?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.user=root
 jdbc.password=123456
 
