--- a/ro-common/src/main/resources/generatorConfig.properties
+++ b/ro-common/src/main/resources/generatorConfig.properties
@@ -3,7 +3,7 @@ drive.class.path=D:/java/maven_repository/mysql/mysql-connector-java/5.1.30/mysq
 
 #\u9A71\u52A8
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/ro-db?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
 
