--- a/ro-common/pom.xml
+++ b/ro-common/pom.xml
@@ -495,5 +495,17 @@
             <version>3.4.0</version>
         </dependency>
 
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.6.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
     </dependencies>
 </project>
