--- a/ro-api-controller/src/main/webapp/WEB-INF/web.xml
+++ b/ro-api-controller/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,23 @@
         <dispatcher>ERROR</dispatcher>
     </filter-mapping>
 
+    <!-- 跨域过滤器 -->
+    <filter>
+        <filter-name>cors</filter-name>
+        <filter-class>com.project.utils.cors.CorsFilter</filter-class>
+        <init-param>
+            <param-name>permitUrl</param-name>
+            <param-value>
+                http://localhost:9520,
+                http://localhost:8898,
+            </param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>cors</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!-- log4j配置，文件路径，因为是跟随项目启动 -->
     <context-param>
         <param-name>log4jConfigLocation</param-name>
