--- a/ro-cms-controller/src/main/webapp/WEB-INF/web.xml
+++ b/ro-cms-controller/src/main/webapp/WEB-INF/web.xml
@@ -64,7 +64,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <!--<filter>
+    <filter>
         <filter-name>XssSqlFilter</filter-name>
         <filter-class>com.project.utils.xss.XssFilter</filter-class>
     </filter>
@@ -72,7 +72,7 @@
         <filter-name>XssSqlFilter</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>-->
+    </filter-mapping>
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
